service dev-react ok

--- a/dev-react/Dockerfile
+++ b/dev-react/Dockerfile
@@ -7,7 +7,7 @@ FROM node:18-alpine
 WORKDIR /app
 
 # ETAPE 2 : COPIE DU FICHIER DANS L'IMAGE
-COPY package.json .
+COPY package*.json ./
 
 # ETAPE 3 : INSTALLATION DES DEPENDANCES & MISE A JOUR DES PACKAGES
 RUN npm install
@@ -19,6 +19,7 @@ COPY . .
 
 EXPOSE 8080
 
+# Commande pour démarrer vite
 CMD [ "npm", "run", "dev" ]
 
 # This should be good enough to run our development environment. 
