--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,16 @@ services:
 
   # SERVICE FASTAPI 
   fastapi:
-    build: ./data-fastapi
+    build: 
+      context: ./data-fastapi
+      dockerfile : Dockerfile
     ports:
       - "8000:8000"
+    volumes:
+      - ./data-fastapi:/app           # Monte le répertoire de travail dans le conteneur
+    environment:
+      - PYTHONUNBUFFERED=1
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
   # SERVICE STREAMLIT 
   streamlit:
