--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,13 @@ services:
     build: 
       context: ./data-fastapi
       dockerfile : Dockerfile
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - ./data-fastapi:/app           # Monte le répertoire de travail dans le conteneur
     ports:
       - "8000:8000"      
-    restart: on-failure
-
-
+    environment:
+      - PYTHONUNBUFFERED=1
+      
   # SERVICE STREAMLIT 
   streamlit:
     build: ./data-streamlit
